# readto

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp  sample.txt
demo/: bytesio.cpp  read_speed_test.py
include/: readto.hpp  readuntil.hpp
src/: main.cpp  readto.cpp  readuntil.cpp
